src/main/java/com/example/boilerplate/core/support/error/GlobalException.java
package com.example.boilerplate.core.support.error;

public class GlobalException extends TypeException {
    public GlobalException(ExceptionType exceptionType) {
        super(exceptionType);
    }
}
